-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2013 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.1
-----------------

3/28/14
    - Enhanced extract_islands() to handle DC lines, custom fields
      and extraction of multiple islands into a single case struct.

3/11/14
    - Fixed bugs in runpf() related to enforcing generator reactive
      power limits when all generators violate limits or when
      the slack bus is converted to PQ.

3/10/14
    - Fixed bug in qps_gurobi() where return status values for
      NUMERIC and SUBOPTIMAL were swapped. Added INPROGRESS status.
      Thanks to Alberto Lamadrid for catching this.

3/2/14
    - Fixed bug in case_info() that incorrectly included dispatchable
      loads in amount reported for min/max capacity for Generation.

2/28/14
    - Updated toggle_dcline.m to work correctly for OPF cases with
      user supplied constraints and costs.

2/27/14
    - Fixed bug in savecase() where the function name mistakenly
      included the path when the FNAME input included a path.
      
2/6/14
    - Small tweak in connected_components() results in ~30x
      speedup for 62k bus network. (Reminder: Never access
      indexed rows of a large sparse matrix, always transpose
      and index the columns).

2/4/14
    - Added check in qps_cplex() for undocumented 'exitstatus'
      values returned by cplexlp() or cplexqp().

1/17/14
    - Added Dan Molzahn's SDP_PF package, a set of applications of
      a semidefinite programming relaxation of the power flow
      equations, to the directory 'extras/sdp_pf'.

1/16/14
    - Added 'status' option for 2nd argument to toggle_reserves()
      toggle_dcline() and toggle_iflims() as a convenient way to
      check the enabled/ disabled status of these sets of callback